--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Chat GPT</title>
   </head>
+
   <body>
     <div id="app">
-      <p>내용</p>
+      <form id="chatForm">
+        <input id="prompt" type="text" placeholder="텍스트를 입렵하세요." />
+        <button type="submit">Submit</button>
+      </form>
+      <p id="response"></p>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
+
 </html>
